infra/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - prometheus.lab.local
    secretName: prometheus-tls
  rules:
  - host: prometheus.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kp-kube-prometheus-stack-prometheus
            port:
              number: 9090
